font-awesome icon theme sample

--- a/plugin/src/main/webapp/less/icons/classic-icons.less
+++ b/plugin/src/main/webapp/less/icons/classic-icons.less
@@ -22,18 +22,17 @@
 // THE SOFTWARE.
 //
 
-.generateClassicIconsForCore('icon-health-20to39', 'health-20to39.png');
+@import "./status-icons.less";
+
 .generateClassicIconsForCore('icon-save', 'save.png');
 .generateClassicIconsForCore('icon-accept', 'accept.png');
 .generateClassicIconsForCore('icon-computer-flash', 'computer-flash.gif');
 .generateClassicIconsForCore('icon-computer', 'computer.png');
 .generateClassicIconsForCore('icon-network', 'network.png');
-.generateClassicIconsForCore('icon-health-00to19', 'health-00to19.png');
 .generateClassicIconsForCore('icon-folder-delete', 'folder-delete.png');
 .generateClassicIconsForCore('icon-lock', 'lock.png');
 .generateClassicIconsForCore('icon-orange-square', 'orange-square.png');
 .generateClassicIconsForCore('icon-document-properties', 'document-properties.png');
-.generateClassicIconsForCore('icon-health-60to79', 'health-60to79.png');
 .generateClassicIconsForCore('icon-plugin', 'plugin.png');
 .generateClassicIconsForCore('icon-warning', 'warning.png');
 .generateClassicIconsForCore('icon-delete-document', 'delete-document.png');
@@ -47,14 +46,12 @@
 .generateClassicIconsForCore('icon-star', 'star.png');
 .generateClassicIconsForCore('icon-new-document', 'new-document.png');
 .generateClassicIconsForCore('icon-previous', 'previous.png');
-.generateClassicIconsForCore('icon-health-80plus', 'health-80plus.png');
 .generateClassicIconsForCore('icon-setting', 'setting.png');
 .generateClassicIconsForCore('icon-new-computer', 'new-computer.png');
 .generateClassicIconsForCore('icon-up', 'up.png');
 .generateClassicIconsForCore('icon-package', 'package.png');
 .generateClassicIconsForCore('icon-user', 'user.png');
 .generateClassicIconsForCore('icon-next', 'next.png');
-.generateClassicIconsForCore('icon-health-40to59', 'health-40to59.png');
 .generateClassicIconsForCore('icon-graph', 'graph.png');
 .generateClassicIconsForCore('icon-new-user', 'new-user.png');
 .generateClassicIconsForCore('icon-clock-anime', 'clock_anime.gif');
