--- a/plugin/src/main/webapp/less/icons/status-icons.less
+++ b/plugin/src/main/webapp/less/icons/status-icons.less
@@ -27,6 +27,12 @@
 // TODO: Replace with something like Doony icons
 //
 
+.generateClassicIconsForCore('icon-health-00to19', 'health-00to19.png');
+.generateClassicIconsForCore('icon-health-20to39', 'health-20to39.png');
+.generateClassicIconsForCore('icon-health-40to59', 'health-40to59.png');
+.generateClassicIconsForCore('icon-health-60to79', 'health-60to79.png');
+.generateClassicIconsForCore('icon-health-80plus', 'health-80plus.png');
+
 .generateClassicIconsForCore('icon-red', 'red.png');
 .generateClassicIconsForCore('icon-red-anime', 'red_anime.gif');
 
